<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txtRH"
        android:background="@drawable/ic_header"
        android:gravity="center|start"
        android:paddingStart="@dimen/ps3"
        android:paddingEnd="@dimen/pe_fb"
        android:text="@string/Register"
        android:textColor="@color/Bg_white"
        android:textSize="@dimen/edit_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/backRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ic_header_back" />

    <EditText
        android:id="@+id/txtUser_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:textSize="@dimen/edit_txt"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/txtemail_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/txtphone_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/Phone_n"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317">

        <RadioButton
            android:id="@+id/RB_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/e_margin_dimen"
            android:paddingStart="@dimen/fb_margin"
            android:text="@string/M" />

        <RadioButton
            android:id="@+id/RB_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/h_logo_dimen"
            android:layout_marginEnd="@dimen/e_margin_dimen"
            android:paddingStart="@dimen/fb_margin"
            android:text="@string/F" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_RH"
        android:layout_width="@dimen/w_spinner_dimen"
        android:layout_height="wrap_content"
        android:entries="@array/Blood_Type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Spinner
        android:id="@+id/spinner_Blood"
        android:layout_width="@dimen/w_spinner_dimen"
        android:layout_height="wrap_content"
        android:entries="@array/Reshus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <EditText
        android:id="@+id/txtpass_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <EditText
        android:id="@+id/txtrepass_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579">

        <RadioButton
            android:id="@+id/RB_Personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/e_margin_dimen"
            android:paddingStart="@dimen/fb_margin"
            android:text="@string/P"/>

        <RadioButton
            android:id="@+id/RB_Organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ps4"
            android:paddingStart="@dimen/fb_margin"
            android:text="@string/O" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_Job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:entries="@array/Job"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <EditText
        android:id="@+id/txthome_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/Add"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <EditText
        android:id="@+id/txtloc_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:ems="10"
        android:hint="@string/Loc"
        android:drawableEnd="@drawable/ic_blood_needed_location"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/pt_fb"
        android:text="@string/Agree"
        android:textColor="@color/Bg_Grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:background="@drawable/btn_style2"
        android:text="@string/Register"
        android:textColor="@color/Bg_Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

</androidx.constraintlayout.widget.ConstraintLayout>