<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostActivity"
    android:background="@color/Bg_Blue">


    <TextView
        android:id="@+id/txtAlomst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Almost"
        android:textColor="@color/Bg_white"
        android:textSize="@dimen/Title2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/txtThanks"
        android:layout_width="@dimen/w_txt_dimen"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textAlignment="center"
        android:textColor="@color/Bg_white"
        android:textSize="@dimen/edit_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/btn_Verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_margin_dimen"
        android:layout_marginEnd="@dimen/e_margin_dimen"
        android:background="@drawable/btn_style1"
        android:text="@string/Verify"
        android:textColor="@color/Bg_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>